--- a/Lelo's Files/LeloFiles.html
+++ b/Lelo's Files/LeloFiles.html
@@ -3,8 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Lelo's Files</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <img src="Images/computer-file-folder.png">
+        <p>Mpumelelo</p>
+        <p>Malaza</p>
     </body>
 </html>
