--- a/Lelo's Files/LeloFiles.html
+++ b/Lelo's Files/LeloFiles.html
@@ -6,8 +6,14 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <img src="Images/computer-file-folder.png">
-        <p>Mpumelelo</p>
-        <p>Malaza</p>
+        <div id="file-name">
+            <img src="Images/computer-file-folder.png" alt="">
+            <div id="file-text">
+                <h1>Mpumelelo Malaza</h1>
+                <h2>Portfolio</h2>
+            </div>
+            
+        </div>
+        
     </body>
 </html>
