--- a/Lelo's Files/LeloFiles.html
+++ b/Lelo's Files/LeloFiles.html
@@ -7,10 +7,10 @@
     </head>
     <body>
         <div id="file-name">
-            <img src="Images/computer-file-folder.png" alt="">
+            <a href="home.html"><img src="Images/portfolio.PNG" alt=""></a>
             <div id="file-text">
-                <h1>Mpumelelo Malaza</h1>
-                <h2>Portfolio</h2>
+                <h1>Mpumelelo <br> Malaza</h1>
+                <!--<h2>Portfolio</h2>--> 
             </div>
             
         </div>
